--- a/src/app/core/side-nav/side-nav.component.html
+++ b/src/app/core/side-nav/side-nav.component.html
@@ -4,6 +4,7 @@
   >
   <mat-drawer-content
     ><app-toolbar [drawer]="drawer"></app-toolbar>
+    <router-outlet></router-outlet>
     <div class="content"></div
   ></mat-drawer-content>
 </mat-drawer-container>
