adding shared component button

--- a/src/app/feature-two/feature-two/feature-two.component.html
+++ b/src/app/feature-two/feature-two/feature-two.component.html
@@ -1,1 +1,6 @@
 <h1>Feature Two Works</h1>
+<app-button
+  [label]="buttonLabel"
+  [color]="buttonColor.primary"
+  [type]="buttonType.raised"
+></app-button>
