adding output event emitter to the button component

--- a/src/app/feature-two/feature-two/feature-two.component.html
+++ b/src/app/feature-two/feature-two/feature-two.component.html
@@ -3,4 +3,5 @@
   [label]="buttonLabel"
   [color]="buttonColor.primary"
   [type]="buttonType.raised"
+  (onClick)="handelOnCLickEvent($event)"
 ></app-button>
