--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,1 +1,1 @@
-<button mat-flat-button [color]="color">{{ label }}</button>
+<button mat-flat-button [color]="color" (click)="handleClick($event)">{{ label }}</button>
